test/files_test/errors/if_missing_condition.scm
; Test: If with missing condition - should return exit code 84
(if)
